syntax = "proto3";
package saonetwork.sao.model;

option go_package = "github.com/SaoNetwork/sao/x/model/types";

message ShardMeta {
  
  string Idx = 1; 
  string peer = 2; 
  string cid = 3; 
}
