syntax = "proto3";
package saonetwork.sao.sao;

option go_package = "github.com/SaoNetwork/sao/x/sao/types";
import "gogoproto/gogo.proto"; 

message Fault {
  string data_id = 1;
  uint64 order_id = 2;
  string shard_id = 3;
  string commit_id = 4;
  string provider = 5;
  string reporter = 6;
  uint32 confirms = 7;
  uint32 status = 8;
}
